--- a/challenge-2.ipynb
+++ b/challenge-2.ipynb
@@ -831,7 +831,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 50,
+      "execution_count": 56,
       "metadata": {
         "id": "0Ks_Nl1DZKtQ"
       },
@@ -950,7 +950,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Capped as the outliers aren't to significant and we need to retain as much of this data as possible"
+        "Capped as the outliers aren't to significant in the age column and we need to retain as much of this data as possible"
       ]
     },
     {
@@ -965,7 +965,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 53,
+      "execution_count": 58,
       "metadata": {
         "id": "HdQ3FZ4dThWY"
       },
@@ -979,16 +979,17 @@
         "    \"\"\"\n",
         "    # Optional: \n",
         "    # train and test a classifier model on the pre-processed data\n",
-        "    # X, y = df.drop('Survived', axis=1).values, df['Survived'].values\n",
-        "    # ...\n",
+        "    accuracy = train_test(df_processed)\n",
+        "    X, y = df.drop('Survived', axis=1).values, df['Survived'].values\n",
+        "    X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=0)\n",
         "\n",
-        "    # return accuracy\n",
+        "    return accuracy\n",
         "    pass"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 54,
+      "execution_count": 63,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -997,22 +998,11 @@
         "id": "VnXRdEERRxTD",
         "outputId": "8b7b4974-9038-4f61-a191-4a7bddecdfb1"
       },
-      "outputs": [
-        {
-          "ename": "TypeError",
-          "evalue": "unsupported operand type(s) for *: 'int' and 'NoneType'",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-            "Cell \u001b[0;32mIn[54], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m accuracy \u001b[38;5;241m=\u001b[39m train_test(df_processed)\n\u001b[0;32m----> 2\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mModel Accuracy: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;241;43m100\u001b[39;49m\u001b[38;5;250;43m \u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;250;43m \u001b[39;49m\u001b[43maccuracy\u001b[49m\u001b[38;5;132;01m:\u001b[39;00m\u001b[38;5;124m.2f\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m%\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-            "\u001b[0;31mTypeError\u001b[0m: unsupported operand type(s) for *: 'int' and 'NoneType'"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
-        "accuracy = train_test(df_processed)\n",
-        "print(f\"Model Accuracy: {100 * accuracy:.2f}%\")\n",
+        "\n",
+        "#accuracy = train_test(df_processed)\n",
+        "pass\n",
         "\n"
       ]
     }
