--- a/challenge-2.ipynb
+++ b/challenge-2.ipynb
@@ -43,7 +43,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 37,
+      "execution_count": 65,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -96,7 +96,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 38,
+      "execution_count": 66,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -149,7 +149,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 39,
+      "execution_count": 67,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -202,7 +202,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 40,
+      "execution_count": 68,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -258,7 +258,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 41,
+      "execution_count": 69,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -272,7 +272,7 @@
           "output_type": "stream",
           "text": [
             " Q5: You are working with a dataset containing a timestamp column (purchase_date).Which of the following feature engineering techniques would help capture temporal patterns effectively for predictive modeling?\n",
-            "Answer: ('All of the above', \"<Extracting day/month/hour helps identify trends and seasonality,converting to UNIX timestamp allows numerical representation for models, and 'days since last purchase' provides insights into customer behavior>\")\n"
+            "Answer: ('All of the above', \"<Extracting day,month and hour helps identify trends and seasonality,converting to UNIX timestamp allows numerical representation for models, and 'days since last purchase' provides insights into customer behavior>\")\n"
           ]
         }
       ],
@@ -317,7 +317,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 42,
+      "execution_count": 70,
       "metadata": {
         "id": "Cm3MG7iySn15"
       },
@@ -343,7 +343,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 43,
+      "execution_count": 71,
       "metadata": {
         "id": "t6L9tk63SxuZ"
       },
@@ -358,7 +358,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 44,
+      "execution_count": 72,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -381,7 +381,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 45,
+      "execution_count": 73,
       "metadata": {},
       "outputs": [
         {
@@ -522,7 +522,7 @@
               "4      0            373450   8.0500   NaN        S  "
             ]
           },
-          "execution_count": 45,
+          "execution_count": 73,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -534,7 +534,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 46,
+      "execution_count": 74,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -584,7 +584,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 47,
+      "execution_count": 75,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -605,7 +605,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 55,
+      "execution_count": 83,
       "metadata": {},
       "outputs": [
         {
@@ -643,6 +643,7 @@
         "    \n",
         "    # TODO: binary encode 'Sex'\n",
         "    df_processed['Sex'] = df_processed['Sex']\n",
+        "    df = pd.get_dummies(df, columns=['Sex'], drop_first=True)\n",
         "    \n",
         "    # fill the 2 empty values with the most common value 'S'\n",
         "    df_processed['Embarked'] = df_processed['Embarked'].fillna('S')\n",
@@ -652,7 +653,6 @@
         "    # TODO: create at least 1 new feature\n",
         "    # e.g. FamilySize = SibSp + Parch + 1\n",
         "    df_processed['FamilySize'] = df_processed['SibSp'] + df_processed['Parch'] + 1\n",
-        "    \n",
         "    \n",
         "    # final step: drop or fill any remaining missing\n",
         "    df_processed.dropna(inplace=True)\n",
@@ -670,7 +670,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 49,
+      "execution_count": 77,
       "metadata": {},
       "outputs": [
         {
@@ -810,7 +810,7 @@
               "max     11.000000  "
             ]
           },
-          "execution_count": 49,
+          "execution_count": 77,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -832,7 +832,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 56,
+      "execution_count": 78,
       "metadata": {
         "id": "0Ks_Nl1DZKtQ"
       },
@@ -877,7 +877,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 51,
+      "execution_count": 79,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -912,7 +912,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 52,
+      "execution_count": 80,
       "metadata": {},
       "outputs": [
         {
@@ -921,7 +921,7 @@
               "<Axes: title={'center': 'Age'}, xlabel='Survived'>"
             ]
           },
-          "execution_count": 52,
+          "execution_count": 80,
           "metadata": {},
           "output_type": "execute_result"
         },
@@ -966,7 +966,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 58,
+      "execution_count": 81,
       "metadata": {
         "id": "HdQ3FZ4dThWY"
       },
@@ -990,7 +990,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 63,
+      "execution_count": 82,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
