--- a/challenge-2.ipynb
+++ b/challenge-2.ipynb
@@ -605,7 +605,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 83,
+      "execution_count": 84,
       "metadata": {},
       "outputs": [
         {
@@ -642,8 +642,8 @@
         "    df_processed = df_processed.drop(drop_cols, axis=1)\n",
         "    \n",
         "    # TODO: binary encode 'Sex'\n",
-        "    df_processed['Sex'] = df_processed['Sex']\n",
-        "    df = pd.get_dummies(df, columns=['Sex'], drop_first=True)\n",
+        "    df['Sex'] = df_processed['Sex'].map({'yes':1, 'no':0})\n",
+        "    df= pd.get_dummies(df, columns=['Sex'], drop_first=True)\n",
         "    \n",
         "    # fill the 2 empty values with the most common value 'S'\n",
         "    df_processed['Embarked'] = df_processed['Embarked'].fillna('S')\n",
