--- a/challenge-2.ipynb
+++ b/challenge-2.ipynb
@@ -43,7 +43,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 65,
+      "execution_count": 85,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -96,7 +96,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 66,
+      "execution_count": 86,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -149,7 +149,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 67,
+      "execution_count": 87,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -202,7 +202,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 68,
+      "execution_count": 88,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -258,7 +258,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 69,
+      "execution_count": 89,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -317,7 +317,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 70,
+      "execution_count": 90,
       "metadata": {
         "id": "Cm3MG7iySn15"
       },
@@ -343,7 +343,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 71,
+      "execution_count": 91,
       "metadata": {
         "id": "t6L9tk63SxuZ"
       },
@@ -358,7 +358,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 72,
+      "execution_count": 92,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -381,7 +381,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 73,
+      "execution_count": 93,
       "metadata": {},
       "outputs": [
         {
@@ -522,7 +522,7 @@
               "4      0            373450   8.0500   NaN        S  "
             ]
           },
-          "execution_count": 73,
+          "execution_count": 93,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -534,7 +534,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 74,
+      "execution_count": 94,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -584,7 +584,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 75,
+      "execution_count": 95,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -605,7 +605,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 84,
+      "execution_count": 96,
       "metadata": {},
       "outputs": [
         {
@@ -642,7 +642,7 @@
         "    df_processed = df_processed.drop(drop_cols, axis=1)\n",
         "    \n",
         "    # TODO: binary encode 'Sex'\n",
-        "    df['Sex'] = df_processed['Sex'].map({'yes':1, 'no':0})\n",
+        "    df['Sex'] = df_processed['Sex'].map({'male':1, 'female':0})\n",
         "    df= pd.get_dummies(df, columns=['Sex'], drop_first=True)\n",
         "    \n",
         "    # fill the 2 empty values with the most common value 'S'\n",
@@ -670,7 +670,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 77,
+      "execution_count": 97,
       "metadata": {},
       "outputs": [
         {
@@ -810,7 +810,7 @@
               "max     11.000000  "
             ]
           },
-          "execution_count": 77,
+          "execution_count": 97,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -832,7 +832,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 78,
+      "execution_count": 98,
       "metadata": {
         "id": "0Ks_Nl1DZKtQ"
       },
@@ -877,7 +877,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 79,
+      "execution_count": 99,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -912,7 +912,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 80,
+      "execution_count": 100,
       "metadata": {},
       "outputs": [
         {
@@ -921,7 +921,7 @@
               "<Axes: title={'center': 'Age'}, xlabel='Survived'>"
             ]
           },
-          "execution_count": 80,
+          "execution_count": 100,
           "metadata": {},
           "output_type": "execute_result"
         },
@@ -966,7 +966,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 81,
+      "execution_count": 101,
       "metadata": {
         "id": "HdQ3FZ4dThWY"
       },
@@ -990,7 +990,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 82,
+      "execution_count": 102,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
