--- a/challenge-2.ipynb
+++ b/challenge-2.ipynb
@@ -43,7 +43,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 103,
+      "execution_count": 121,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -96,7 +96,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 104,
+      "execution_count": 122,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -149,7 +149,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 105,
+      "execution_count": 123,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -202,7 +202,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 106,
+      "execution_count": 124,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -258,7 +258,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 107,
+      "execution_count": 125,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -317,7 +317,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 108,
+      "execution_count": 126,
       "metadata": {
         "id": "Cm3MG7iySn15"
       },
@@ -343,7 +343,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 109,
+      "execution_count": 127,
       "metadata": {
         "id": "t6L9tk63SxuZ"
       },
@@ -358,7 +358,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 110,
+      "execution_count": 128,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -381,7 +381,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 111,
+      "execution_count": 129,
       "metadata": {},
       "outputs": [
         {
@@ -522,7 +522,7 @@
               "4      0            373450   8.0500   NaN        S  "
             ]
           },
-          "execution_count": 111,
+          "execution_count": 129,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -534,7 +534,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 112,
+      "execution_count": 130,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -584,7 +584,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 113,
+      "execution_count": 131,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -605,7 +605,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 114,
+      "execution_count": 132,
       "metadata": {},
       "outputs": [
         {
@@ -642,7 +642,7 @@
         "    df_processed = df_processed.drop(drop_cols, axis=1)\n",
         "    \n",
         "    # TODO: binary encode 'Sex'\n",
-        "    df['Sex'] = df_processed['Sex'].map({'male':0, 'female':1})\n",
+        "    df['Sex'] = df['Sex'].map({'male':0, 'female':1})\n",
         "    \n",
         "    # fill the 2 empty values with the most common value 'S'\n",
         "    df_processed['Embarked'] = df_processed['Embarked'].fillna('S')\n",
@@ -670,7 +670,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 115,
+      "execution_count": 133,
       "metadata": {},
       "outputs": [
         {
@@ -810,7 +810,7 @@
               "max     11.000000  "
             ]
           },
-          "execution_count": 115,
+          "execution_count": 133,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -832,7 +832,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 116,
+      "execution_count": 134,
       "metadata": {
         "id": "0Ks_Nl1DZKtQ"
       },
@@ -877,7 +877,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 117,
+      "execution_count": 135,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -912,7 +912,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 118,
+      "execution_count": 136,
       "metadata": {},
       "outputs": [
         {
@@ -921,7 +921,7 @@
               "<Axes: title={'center': 'Age'}, xlabel='Survived'>"
             ]
           },
-          "execution_count": 118,
+          "execution_count": 136,
           "metadata": {},
           "output_type": "execute_result"
         },
@@ -966,7 +966,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 119,
+      "execution_count": 137,
       "metadata": {
         "id": "HdQ3FZ4dThWY"
       },
@@ -990,7 +990,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 120,
+      "execution_count": 138,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
